--- a/src/app/Paginas/Body/backup/accounts/accounts.component.css
+++ b/src/app/Paginas/Body/backup/accounts/accounts.component.css
@@ -1,7 +1,14 @@
-.width-4{
-  width: 4.3478%;
+@media screen and (max-width: 1920px) and (max-height: 1080px) {
+  .table-fixed-xl {
+    width: 200% !important;
+  }
 }
-.table-fixed-xl {
-  /*overflow-x: scroll;*/
-  width: 200% !important;
+@media screen and (max-width: 1366px) and (max-height: 768px) {
+  .table-fixed-xl {
+    width: 300% !important;
+  }
+}
+.table-fixed-xl thead tr th,
+.table-fixed-xl tbody tr td {
+  width: 4.347% !important;
 }
